--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "voidbots",
-  "version": "2.1.0",
+  "version": "2.3.0",
   "description": "An official module for interacting with the voidbots.net API",
   "main": "index.js",
+  "typings": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
