Added post functions

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/TheVoidPros/VoidBots-NPM#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "localtunnel": "^2.0.1",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {}
